--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ hacker_plan=false
 
 ngrok_token=
 ngrok_region=us
+JAVA_HOME=jdk-19.0.1
+JRE_HOME=${JAVA_HOME}/jre
+CLASSPATH=.:${JAVA_HOME}/lib:${JRE_HOME}/lib
+PATH=${JAVA_HOME}/bin:$PATH
